[gd_scene load_steps=39 format=3 uid="uid://bs0wa40ksvwl7"]

[ext_resource type="Script" path="res://characters/player/scripts/player_movement.gd" id="1_yxq4n"]
[ext_resource type="PackedScene" uid="uid://b635kl4w14rj5" path="res://characters/player/models/s_player.tscn" id="2_gr7ob"]

[sub_resource type="BoxMesh" id="BoxMesh_40nhu"]

[sub_resource type="SphereMesh" id="SphereMesh_5sokv"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_qheli"]
fadein_time = 0.1
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3vn16"]
animation = &"DodgeRoll"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_uqova"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mf877"]
animation = &"MeleeCombo1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w6j1l"]
animation = &"MeleeCombo2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2080f"]
animation = &"MeleeCombo3"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i34p4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5tm72"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k2jaj"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hmiee"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cskxn"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xxej0"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hxpsn"]
states/End/position = Vector2(814, 236)
states/MeleeCombo1/node = SubResource("AnimationNodeAnimation_mf877")
states/MeleeCombo1/position = Vector2(401, 100)
states/MeleeCombo2/node = SubResource("AnimationNodeAnimation_w6j1l")
states/MeleeCombo2/position = Vector2(607, 100)
states/MeleeCombo3/node = SubResource("AnimationNodeAnimation_2080f")
states/MeleeCombo3/position = Vector2(814, 100)
transitions = ["Start", "MeleeCombo1", SubResource("AnimationNodeStateMachineTransition_i34p4"), "MeleeCombo3", "End", SubResource("AnimationNodeStateMachineTransition_5tm72"), "MeleeCombo1", "End", SubResource("AnimationNodeStateMachineTransition_k2jaj"), "MeleeCombo1", "MeleeCombo2", SubResource("AnimationNodeStateMachineTransition_hmiee"), "MeleeCombo2", "MeleeCombo3", SubResource("AnimationNodeStateMachineTransition_cskxn"), "MeleeCombo2", "End", SubResource("AnimationNodeStateMachineTransition_xxej0")]
graph_offset = Vector2(-73, 23)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4jqu7"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q6voe"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bor4l"]
animation = &"Sprint"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x66r6"]
animation = &"Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rgb05"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pyxnc"]
xfade_time = 0.1
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.WALK"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_88rna"]
xfade_time = 0.2
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5etro"]
xfade_time = 0.1
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.RUN"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8ym1d"]
xfade_time = 0.1
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.RUN"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d66jw"]
xfade_time = 0.2
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tjlmx"]
xfade_time = 0.2
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.WALK"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kt8ls"]
xfade_time = 0.1
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.SPRINT"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wif3e"]
xfade_time = 0.1
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.RUN"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vf0w0"]
xfade_time = 0.1
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.WALK"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q3y28"]
xfade_time = 0.1
switch_mode = 1
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.SPRINT"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s81l8"]
xfade_time = 0.3
advance_mode = 2
advance_expression = "player_state == PlayerState.IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bfw52"]
xfade_time = 0.2
advance_mode = 2
advance_expression = "player_state == PlayerState.MOVING && move_state == MoveState.SPRINT"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_62x84"]
states/Idle/node = SubResource("AnimationNodeAnimation_4jqu7")
states/Idle/position = Vector2(316, 72)
states/Running/node = SubResource("AnimationNodeAnimation_q6voe")
states/Running/position = Vector2(533, -20)
states/Sprint/node = SubResource("AnimationNodeAnimation_bor4l")
states/Sprint/position = Vector2(691, 72)
states/Start/position = Vector2(164, 72)
states/Walking/node = SubResource("AnimationNodeAnimation_x66r6")
states/Walking/position = Vector2(533, 183)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_rgb05"), "Idle", "Walking", SubResource("AnimationNodeStateMachineTransition_pyxnc"), "Running", "Idle", SubResource("AnimationNodeStateMachineTransition_88rna"), "Walking", "Running", SubResource("AnimationNodeStateMachineTransition_5etro"), "Idle", "Running", SubResource("AnimationNodeStateMachineTransition_8ym1d"), "Walking", "Idle", SubResource("AnimationNodeStateMachineTransition_d66jw"), "Running", "Walking", SubResource("AnimationNodeStateMachineTransition_tjlmx"), "Running", "Sprint", SubResource("AnimationNodeStateMachineTransition_kt8ls"), "Sprint", "Running", SubResource("AnimationNodeStateMachineTransition_wif3e"), "Sprint", "Walking", SubResource("AnimationNodeStateMachineTransition_vf0w0"), "Walking", "Sprint", SubResource("AnimationNodeStateMachineTransition_q3y28"), "Sprint", "Idle", SubResource("AnimationNodeStateMachineTransition_s81l8"), "Idle", "Sprint", SubResource("AnimationNodeStateMachineTransition_bfw52")]
graph_offset = Vector2(-23, -83)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_acyim"]
nodes/DoABarrelRoll/node = SubResource("AnimationNodeOneShot_qheli")
nodes/DoABarrelRoll/position = Vector2(320, 200)
nodes/DodgeRoll/node = SubResource("AnimationNodeAnimation_3vn16")
nodes/DodgeRoll/position = Vector2(-460, 320)
nodes/MeleeCombo/node = SubResource("AnimationNodeOneShot_uqova")
nodes/MeleeCombo/position = Vector2(-80, 200)
nodes/MeleeComboAnimation/node = SubResource("AnimationNodeStateMachine_hxpsn")
nodes/MeleeComboAnimation/position = Vector2(-460, 520)
nodes/MoveAnimation/node = SubResource("AnimationNodeStateMachine_62x84")
nodes/MoveAnimation/position = Vector2(-460, 100)
nodes/output/position = Vector2(600, 200)
node_connections = [&"DoABarrelRoll", 0, &"MeleeCombo", &"DoABarrelRoll", 1, &"DodgeRoll", &"MeleeCombo", 0, &"MoveAnimation", &"MeleeCombo", 1, &"MeleeComboAnimation", &"output", 0, &"DoABarrelRoll"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ohi1f"]

[sub_resource type="SphereShape3D" id="SphereShape3D_b1vyl"]
radius = 0.25

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_yxq4n")
dodge_length = 10.0
camera_dist = 4.0
camera_dodge_follow_speed = 100.0

[node name="PlayerModel" parent="." instance=ExtResource("2_gr7ob")]

[node name="Skeleton3D" parent="PlayerModel/PlayerArmature" index="0"]
bones/1/position = Vector3(0.0709408, -0.106825, -1.78127)
bones/1/rotation = Quaternion(-0.660101, -1.88052e-07, 2.64924e-07, 0.751177)
bones/2/rotation = Quaternion(-0.154256, -3.14893e-08, 1.04894e-07, 0.988031)
bones/3/rotation = Quaternion(0.0851728, -1.17147e-12, -6.09202e-08, 0.996366)
bones/4/rotation = Quaternion(0.105943, 1.14202e-12, -7.5776e-08, 0.994372)
bones/5/rotation = Quaternion(-0.0778697, -4.73978e-13, 5.56967e-08, 0.996964)
bones/7/position = Vector3(0.224964, 0.188816, -0.0750484)
bones/8/rotation = Quaternion(-0.173694, -0.307, -0.471427, 0.808293)
bones/9/rotation = Quaternion(0.176863, -0.0148577, -0.190461, 0.965517)
bones/10/rotation = Quaternion(0.0606974, 0.00460971, 0.0287617, 0.997731)
bones/12/position = Vector3(-0.224964, 0.188816, -0.0750481)
bones/12/rotation = Quaternion(-0.0221575, -0.0355539, 0.802553, 0.595109)
bones/13/rotation = Quaternion(-0.0899567, 0.307552, 0.444195, 0.836666)
bones/14/rotation = Quaternion(0.111657, 0.0172385, 0.128724, 0.985224)
bones/15/rotation = Quaternion(0.0263293, -0.00284699, -0.0411532, 0.998802)
bones/16/rotation = Quaternion(-0.416821, 0.509831, 0.371138, -0.654668)
bones/19/rotation = Quaternion(0.904869, -0.160082, -0.298191, 0.258202)
bones/19/scale = Vector3(0.999994, 1, 0.999984)
bones/20/rotation = Quaternion(0.285712, -0.00167155, -0.288578, 0.913832)
bones/21/rotation = Quaternion(-0.717894, 0.0315311, 0.133649, 0.682475)
bones/22/rotation = Quaternion(-0.16106, 9.55416e-06, 0.0333078, 0.986382)
bones/23/rotation = Quaternion(0.899334, 0.114899, 0.317872, 0.277408)
bones/24/rotation = Quaternion(0.288752, 0.00166793, 0.291654, 0.911898)
bones/25/rotation = Quaternion(-0.706317, -0.0337755, -0.133103, 0.694449)
bones/26/rotation = Quaternion(-0.16106, -1.03589e-05, -0.0333081, 0.986382)
bones/27/position = Vector3(0.849937, 1.71862, 0.152026)
bones/27/rotation = Quaternion(-0.0636078, 0.145822, 0.871813, -0.463284)
bones/28/position = Vector3(-0.852068, 1.72571, 0.155721)
bones/28/rotation = Quaternion(0.0585729, 0.148969, 0.873366, 0.46001)
bones/29/position = Vector3(0.959863, 2.78859, -0.492299)
bones/30/position = Vector3(-0.959863, 2.78859, -0.492299)
bones/31/position = Vector3(0.273923, 0.139687, -0.131378)
bones/32/position = Vector3(-0.273923, 0.139687, -0.131378)
bones/33/position = Vector3(1.03777, 1.11912, 0.843272)
bones/34/position = Vector3(-1.03777, 1.11912, 0.843272)

[node name="Hat" parent="PlayerModel/PlayerArmature/Skeleton3D" index="0"]
transform = Transform3D(0.175062, 0.075362, 0.0192753, -0.0596739, 0.227078, 0.0151387, -0.0134429, -0.0266046, 0.183814, -0.021384, 3.8424, -0.115494)

[node name="RightHold" parent="PlayerModel/PlayerArmature/Skeleton3D" index="2"]
transform = Transform3D(-0.0161227, -0.672206, 0.740189, 0.968665, 0.173001, 0.178211, -0.247847, 0.719868, 0.648353, -0.806626, 1.83771, 0.103361)

[node name="Moveability" type="BoneAttachment3D" parent="PlayerModel/PlayerArmature/Skeleton3D" index="3"]
transform = Transform3D(1, 0, -1.50996e-07, -1.50996e-07, 0, -1, 0, 1, 0, 3.02426, -4.56651e-07, 0)
bone_name = "Moveability"
bone_idx = 36

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerModel/PlayerArmature/Skeleton3D/Moveability"]
mesh = SubResource("BoxMesh_40nhu")

[node name="Turnability" type="BoneAttachment3D" parent="PlayerModel/PlayerArmature/Skeleton3D" index="4"]
transform = Transform3D(1, 0, -1.50996e-07, -1.50996e-07, 0, -1, 0, 1, 0, 5.02426, -4.56651e-07, 0)
bone_name = "Turnability"
bone_idx = 37

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerModel/PlayerArmature/Skeleton3D/Turnability"]
mesh = SubResource("SphereMesh_5sokv")

[node name="AnimationTree" type="AnimationTree" parent="PlayerModel"]
tree_root = SubResource("AnimationNodeBlendTree_acyim")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("../AnimationPlayer")
parameters/DoABarrelRoll/active = false
parameters/DoABarrelRoll/internal_active = false
parameters/DoABarrelRoll/request = 0
parameters/MeleeCombo/active = false
parameters/MeleeCombo/internal_active = false
parameters/MeleeCombo/request = 0

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ohi1f")

[node name="SphereCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("SphereShape3D_b1vyl")
target_position = Vector3(0, 2, 4)

[node name="CameraForwardPivot" type="Node3D" parent="."]

[node name="CameraHeightPivot" type="Node3D" parent="CameraForwardPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="PlayerCamera" type="Camera3D" parent="CameraForwardPivot/CameraHeightPivot"]
transform = Transform3D(1, 0, 0, 0, 0.968583, 0.24869, 0, -0.24869, 0.968583, 0, 1, 5)
current = true

[connection signal="animation_finished" from="PlayerModel/AnimationTree" to="." method="animation_finished"]
[connection signal="animation_started" from="PlayerModel/AnimationTree" to="." method="animation_started"]

[editable path="PlayerModel"]
